feat: implementa Lancamento, Meta, ResumoMensal e Simulador de Investimentos
- Entidades Lancamento (RECEITA/GASTO_FIXO/GASTO_VARIAVEL/INVESTIMENTO) e Meta com isolamento por usuário
- Endpoints: /lancamentos, /metas (com projeção CDI), /resumo/{ano}/{mes}, /investimentos (simular/ofertas/tipos)
- BancoCentralService consulta CDI real via API do Banco Central com fallback automático
- Simulador aplica IR regressivo (CDB) e isencão (LCI/LCA/Poupanca) com juros compostos corretos
- B3: injeção via construtor em CategoriaController, JWT/CORS via env vars, application-prod.properties com PostgreSQL, fix BOM maven-wrapper.properties, PostgreSQL driver no pom.xml

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>